# continuos-batching-bench

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: experiments.yaml  model.yaml  models.yaml
docs/: CODE_WALKTHROUGH.md  README.md  REPRODUCTION.md
docs/sample-results/: README.md  gemma-4-e4b-off-summary.md  gemma-4-e4b-on-summary.md
scenarios/prompts/: fixtures.jsonl  generated.jsonl
scripts/: activate-vllm.sh  build_prompts.py  capture_dashboard_screenshots.py  check_server.py  estimate_run_size.py  generate_readme_charts.py  install_vllm_metal.sh  resolve_serve_args.py  sample_powermetrics.sh  serve.sh
src/continuous_batching/: __init__.py  cli.py  config_loader.py  constants.py  paths.py
src/continuous_batching/application/: __init__.py  orchestrator.py  scheduler.py
src/continuous_batching/domain/: __init__.py  model_registry.py  models.py  scenarios.py
src/continuous_batching/evaluation/: __init__.py  conclusions.py  stats.py
src/continuous_batching/infrastructure/: __init__.py  metrics.py  monitor.py  store.py  vllm_client.py
src/continuous_batching/reporting/: __init__.py  dashboard.py  export.py
tests/integration/: test_live_server.py
tests/unit/: test_build_wave.py  test_conclusions.py  test_export.py  test_metrics.py  test_model_registry.py  test_orchestrator_mock.py  test_paths.py  test_scenarios.py  test_scheduler.py  test_stats.py  test_store.py
